--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@
 *.out
 *.app
 *.opendb
+*.ipch
+SA_Forum/.vs/SA_Forum/v16/.suo
+SA_Forum/.vs/SA_Forum/v16/.suo
+SA_Forum/.vs/SA_Forum/v16/.suo
+SA_Forum/.vs/SA_Forum/v16/.suo
+SA_Forum/.vs/SA_Forum/v16/.suo
